# AlphaLens

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .coverage 2  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/fixtures/demo_filings/: AAPL_000032019325000098.json  AAPL_000032019326000145.json  JPM_000001961425000112.json  JPM_000001961426000089.json  NVDA_000104581025000456.json  NVDA_000104581026000123.json  NVDA_question_history.json
backend/app/services/: company_service.py  evidence_claims.py  filing_service.py
backend/app/services/filing/: __init__.py  comparison.py  comparison_claims.py  retrieval.py
backend/tests/: test_api.py  test_company_service.py  test_comparison_claims.py  test_demo_mode.py  test_evidence_claims.py  test_filing_comparison.py  test_filing_service.py
backend/tests/eval/: test_brief_quality.py
backend/tests/fixtures/: nvda_10q_minimal.json
docs/: ARCHITECTURE.md  DEPLOY.md
docs/screenshots/: README.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/company/[ticker]/: route.ts
frontend/app/api/health/: route.ts
frontend/components/: company-search.tsx
frontend/components/brief/: ComparisonPanel.tsx  ComparisonValidatedClaimsPanel.tsx  EvidenceLibrary.tsx  QAPanel.tsx  RedFlagCard.tsx  ThesisPointCard.tsx  ValidatedClaimsPanel.tsx  format.ts
frontend/e2e/: home.spec.ts
frontend/lib/: api.ts
(+4 files in other folders)
