[project]
name = "alphalens-backend"
version = "0.1.0"
description = "FastAPI backend for AlphaLens"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/services/filing_service.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
